--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -22,7 +22,7 @@ fxLayoutGap="10px">
     </mat-grid-list>
 </div>
 
-<div fxFlex *ngIf="selectedDish">
+<!-- <div fxFlex *ngIf="selectedDish">
     <mat-card>
         <mat-card-header>
             <mat-card-title>
@@ -38,6 +38,6 @@ fxLayoutGap="10px">
             <button mat-button>Share</button>
         </mat-card-actions>
     </mat-card>
-</div>
+</div> -->
 
 </div>
