--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -13,7 +13,7 @@ fxLayoutGap="10px">
 
 <div fxFlex>
     <mat-grid-list cols="2" rowHeight="200px">
-        <mat-grid-tile *ngFor="let dish of dishes">
+        <mat-grid-tile *ngFor="let dish of dishes" (click)="onSelect(dish)">
             <img height="200px" src={{dish.image}} alt={{dish.name}}>
             <mat-grid-tile-footer>
                 <h1 matLine>{{dish.name | uppercase}}</h1>
@@ -21,7 +21,7 @@ fxLayoutGap="10px">
         </mat-grid-tile>
     </mat-grid-list>
 </div>
-
+<app-dishdetail [dish]="selectedDish"></app-dishdetail>
 <!-- <div fxFlex *ngIf="selectedDish">
     <mat-card>
         <mat-card-header>
