--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary"><span>CG DD </span></mat-toolbar>
 <app-header></app-header>
-<app-menu></app-menu>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
 
