--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -1,12 +1,14 @@
 <div class="container"
-    fxLayout="row"
+    fxLayout="row wrap"
     fxLayout.sm="column"
     fxLayout.xs="column"
-    fxLayoutGap="3px" 
+    fxLayoutAlign.gt-md="space-around center"
+    fxLayoutGap="10px" 
     fxLayoutGap.xs="0">
     
 
-  <div fxFlex="40" *ngIf="dish">
+ <!-- <div fxFlex="40" *ngIf="dish">-->
+  <div fxFlex="100">
     <mat-card>
         <mat-card-header>
             <mat-card-title>
@@ -20,6 +22,7 @@
         <mat-card-actions>
             <button mat-button>Like</button>
             <button mat-button>Share</button>
+            <button mat-button (click)="goBack()">Back</button>
         </mat-card-actions>
     </mat-card>
   </div>
